# knowrob_kernel

./: CHANGELOG.md  README.rst  hatch_build.py  pyproject.toml
knowrob_kernel/: __init__.py  __main__.py  kernel.py
